--- a/src/css/Pages/nav.css
+++ b/src/css/Pages/nav.css
@@ -8,17 +8,23 @@
 }
 
 #content > #navHeaderDiv > #navLogoDiv {
-    width: 100%;
-    height: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-items: center;
+    font-family: 'Kaushan Script', cursive;
 }
 
 #content > #navHeaderDiv > #navLogoDiv > img {
     content: url("/src/images/logo.png");
     width: 70px;
     height: 60px;
+}
+
+#content > #navHeaderDiv > h3 {
+    margin-left: auto;
+    align-self: center;
+    font-family: 'Kaushan Script', cursive;
 }
 
 #content > #navHeaderDiv > #navButtonsDiv {
@@ -36,6 +42,5 @@
 }
 
 #content > #navHeaderDiv > #navButtonsDiv > *:hover {
-    filter: invert(1);
-    animation: wiggleAnimation 0.2s;
+    animation: invertColorAnimation 0.3s forwards;
 }
