--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,5 @@
 @import url("./Common/global.css");
+@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
 
 html,
 body,
