--- a/src/css/style.css
+++ b/src/css/style.css
@@ -17,12 +17,21 @@ body {
 }
 
 #content {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    background-color: var(--accentColor5);
+}
+
+#background {
+    background-color: white;
+    z-index: -1;
+    position: absolute;
     background-image: url("../images/sushi1.jpg");
     background-repeat: no-repeat;
     width: 100%;
     height: 100%;
     background-size: cover;
-    display: flex;
-    flex-direction: column;
 }
 
