--- a/src/css/Pages/nav.css
+++ b/src/css/Pages/nav.css
@@ -3,7 +3,7 @@
     color: var(--fontLight);
     display: flex;
     flex-direction: column;
-    background-color: var(--accentColor2);
+    background-color: var(--accentColor1);
     border: var(--xSmBorder) solid var(--accentColor3);
 }
 
@@ -58,3 +58,13 @@
 #content > #navHeaderDiv > div > #navButtonsDiv > *:hover {
     animation: invertColorAnimation 0.3s forwards;
 }
+
+@media (max-width:600px) { 
+    #content > #navHeaderDiv > h3 {
+        text-align: end;
+    }
+
+    #content > #navHeaderDiv > div > #navButtonsDiv {
+        margin-right: 0;
+    }
+ }
