--- a/src/css/style.css
+++ b/src/css/style.css
@@ -21,13 +21,11 @@ body {
     height: 100%;
     display: flex;
     flex-direction: column;
-    background-color: var(--accentColor5);
 }
 
 #background {
-    background-color: white;
     z-index: -1;
-    position: absolute;
+    position: fixed;
     background-image: url("../images/sushi1.jpg");
     background-repeat: no-repeat;
     width: 100%;
