--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,6 @@
 @import url("./Common/global.css");
 @import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 html,
 body,
@@ -8,6 +9,7 @@ body > * {
     margin: 0px;
     height: 100%;
     width: 100%;
+    font-family: 'Roboto', sans-serif;
 }
 
 body {
@@ -36,4 +38,5 @@ body {
 
 #content > :not(#navHeaderDiv){
     margin-top: var(--lgPadding);
+    background-color: var(--accentColor5);
 }
