--- a/src/css/Common/animations.css
+++ b/src/css/Common/animations.css
@@ -92,3 +92,31 @@
         opacity: 0;
     }
 }
+
+
+.slideOut {
+    /*animation: slideOutAnimation 0.7s linear forwards;*/
+	animation: fadeOutAnimation 0.3s linear forwards;
+}
+
+.slideIn {
+	animation: fadeInAnimation 1s linear forwards;
+    /*animation: slideInAnimation 1.0s linear forwards;*/
+}
+
+@keyframes slideOutAnimation {
+	100% {
+		filter: contrast(1.3);
+		transform: translate(100%);
+	}
+}
+
+@keyframes slideInAnimation{
+	0% {
+		transform: translate(100%);
+	}
+	100% {
+		filter: contrast(1);
+		transform: translate(0);
+	}
+}
